# use_two_libs

./: CMakeLists.txt  use_two_libs.c
